--- a/public/browser-extension.html
+++ b/public/browser-extension.html
@@ -9,6 +9,12 @@
     <!-- Load Vue Devtools remote ONLY in development -->
     <script src="http://localhost:8098"></script>
   <% } %>
+  <!-- <script type="module">
+    import { showDirectoryPicker, showOpenFilePicker, showSaveFilePicker } from 'https://cdn.jsdelivr.net/npm/file-system-access/lib/es2018.js';
+    window.showDirectoryPicker = showDirectoryPicker;
+    window.showOpenFilePicker = showOpenFilePicker;
+    window.showSaveFilePicker = showSaveFilePicker;
+</script> -->
 </head>
 <body>
   <div id="app"></div>
